<resources>
    <string name="app_name">SACAI</string>
    <string name="app_tagline">Championing accessibility, one ride at a time</string>
    <string name="hint_firstName">Enter your first name</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_lastName">Enter your last name</string>
    <string name="hint_driverName">Enter driver\'s name</string>
    <string name="hint_conductorName">Enter conductor\'s name</string>
    <string name="hint_franchiseSelect">Enter franchise name</string>
    <string name="label_login">Log In</string>
    <string name="label_signup">Sign Up</string>
    <string name="label_logout">Log Out</string>
    <string name="label_next">Next</string>
    <string name="label_back">Back</string>
    <string name="label_forgetPass">Forgot Password?</string>
    <string name="label_forgetPassBtn">Send Recovery Link</string>
    <string name="msg_identifyNeeds">Do you have any needs we can cater to?</string>
    <string name="label_wheelchair">Wheelchair User</string>
    <string name="label_auditory">Auditory Impairment</string>
    <string name="label_mobility">Mobility Impairment</string>
    <string name="label_placeholder">TEMP</string>
    <string name="err_emptyRequiredFields">Invalid inputs. Fill out all necessary fields.</string>
    <string name="msg_success">Success!</string>
    <string name="label_operator">Operator</string>
    <string name="label_commuter">Commuter</string>
    <string name="msg_operLogin">Log in for Operator</string>
    <string name="msg_commLogin">Log in for Commuter</string>
    <string name="msg_operSignup">Sign up for Operator</string>
    <string name="msg_commSignup">Sign up for Commuter</string>
    <string name="hint_licensePlate">Enter license plate no.</string>
    <string name="msg_switchToOperator">Are you a SACAI OPERATOR?</string>
    <string name="label_switchToOper">Switch to Operator</string>
    <string name="label_switchToComm">Switch to Commuter</string>
    <string name="label_operatorInfo">Operator Information</string>
    <string name="label_vehicleInfo">Vehicle Information</string>
    <string name="label_switchToSignup">Don\'t have an account? Sign up!</string>
    <string name="label_switchToLogin">Already have an account? Log in.</string>
    <string name="msg_signupAgree">By continuing, you agree with our Terms of Service and Privacy Policy.</string>
    <string name="err_fieldRequired">Field Required!</string>
    <string name="msg_forgetPass">Enter the email linked to your account to reset your password.</string>
    <string name="msg_resetLinkSent">Password reset link sent! Please check your email.</string>
    <string name="hint_location">Your location</string>
    <string name="hint_destination">Select your destination</string>
    <string name="hint_route">Select your route</string>
    <string name="label_goNow">Go Now</string>
    <string name="userCommuter">Commuter</string>
    <string name="err_emailExists">User account in this email already exists. Please try again.</string>
    <string name="err_unknown">Something wrong happened. Please try again.</string>
    <string name="err_pleaseEnterEmail">Please enter a valid email.</string>
    <string name="err_authentication">Authentication Failed. Please try again.</string>
    <string name="title_activity_comm_map">Map</string>
    <string name="msg_checkEmailForVerifyLink">Please check your email to verify your account.</string>
    <string name="msg_loginSuccess">Logged in successfully. Welcome!</string>
    <string name="err_invalidEmail">Please enter a valid email address.</string>
    <string name="regex_alphacheck">.*[A-Za-z].*</string>
    <string name="regex_numcheck">..*[0–9].*</string>
    <string name="err_passShouldBeAlphanumeric">Password should have both letters and numbers.</string>
    <string name="err_passCharCount">Password should contain at least 8 characters.</string>
    <string name="label_home">Home</string>
    <string name="label_editProfile">Edit Profile</string>
    <string name="label_passengerList">Passenger List</string>
    <string name="label_needs">Needs:</string>
    <string name="hint_homeAddress">Enter your home address</string>
    <string name="hint_workAddress">Enter your work address</string>
    <string name="hint_userName">Enter your username</string>
    <string name="label_save">Save Changes</string>
    <string name="msg_loginToEdit">Please login!</string>
    <string name="err_userDoesNotExist">Error: User is not registered.</string>
    <string name="err_failedToReadData">Error: Failed to read data.</string>
    <string name="label_wheelchairCapacity">Wheelchair Capacity</string>
    <string name="desc_profilePic">User\'s profile picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="err_wrongUserType">Account is registered as an Operator. Please switch to Operator to login, or signup as a commuter.</string>
    <string name="err_invalidCharacterInput">Numbers and special characters are not allowed.</string>
    <string name="label_update_email">Change Email Address</string>
    <string name="label_re_authenticate">Enter your current email and password so we can reauthenticate you.</string>
    <string name="hint_new_email">Enter your new email</string>
    <string name="label_changeEmail">Change email</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_enterNewEmail">Enter your new email address</string>
    <string name="err_cant_have_same_pickup_dropoff">You entered the same pick-up and drop-off point. Please try again!</string>
    <string name="err_invalid_pickup">Make sure it\'s not the same as drop-off.</string>
    <string name="err_invalid_dropoff">Make sure it\'s not the same as pick-up.</string>
    <string name="label_rideHistory">Ride History</string>
    <string name="err_couldntRetrieveStops">Couldn\'t retrieve bus stops. Please refresh.</string>
    <string name="label_rideEnded">Ride Ended</string>
    <string name="desc_map">Google Maps</string>
    <string name="label_ride_history">Ride History</string>
    <string name="geofence_transition_entered">Geofence entered.</string>
    <string name="geofence_transition_dwell">Dwelling in geofence.</string>
    <string name="geofence_unknown_transition">Geofence transition unknown.</string>
    <string name="msg_makes_sure_you_are_near_a_bus_stop">Make sure you are near the bus stop.</string>
    <string name="label_PARA_SASAKAY">PARA! Sasakay</string>
    <string name="label_work">Work</string>
    <string name="msg_please_select_origin_bus_stop">Please select an origin bus stop.</string>
    <string name="msg_your_selected_destination_not_within_route_of_origin">Your chosen destination is not within the route of your selected origin.</string>
    <string name="label_scan_qr">Scan QR</string>
    <string name="label_cancel_para">Cancel PARA SASAKAY</string>
    <string name="label_end_trip">End Trip</string>
    <string name="label_upload_id">Upload PWD id</string>
    <string name="label_QRCode">QR Code</string>
    <string name="label_saveQR">Save to Device</string>
    <string name="label_para_bababa">PARA! Bababa</string>
    <string name="msg_you_are_now_within_range_of_a_bus_stop">You are now within the range of a bus stop.</string>
    <string name="msg_you_are_not_within_range_of_a_bus_stop">You are not within the range of a bus stop.</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="msg_do_you_want_to_disembark_at_the_nearest_bus_stop">Do you want to disembark at the next nearest bus stop?</string>
    <string name="msg_alerting_operator_of_para">Alerting operator of disembark request</string>
    <string name="msg_para_bababa">\" said PARA! Bababa.\"</string>
    <string name="msg_user_has_successfully_disembarked_from_bus">A user has disemabarked successfully from the bus.</string>
    <string name="label_change_profile_picture">Change Profile Picture</string>
    <string name="label_update_password">Change Password</string>
    <string name="msg_enter_your_email_so_we_can_send_a_link_to_reset_your_password">Enter your email so we can send a link to reset your password.</string>
    <string name="label_change_password">Change password</string>
    <string name="msg_you_are_now_visible">You are now visible to commuters.</string>
    <string name="msg_you_are_no_longer_visible">You are not visible to commuters.</string>
    <string name="label_commuters_in_bus_stop">Commuters in Bus Stop: </string>
</resources>