<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/teal_700"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".commuter.CommSignupActivity" >
    <!--TOOLBAR-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/BasicToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:navigationIcon="@drawable/ic_back" />
    <!--FORM GROUP-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingHorizontal="40dp" >
        <!--FORM LABEL-->
        <TextView
            style="@style/DarkTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/label_signup" />
        <!--NEEDS ASSESSMENT-->
        <TextView
            style="@style/DarkSubheadingTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_identifyNeeds" />
        <!--MOBILITY IMPAIRMENT-->
        <CheckBox
            style="@style/DarkCheckbox"
            android:id="@+id/cbMobility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:text="@string/label_mobility" />
        <!--AUDITORY IMPAIRMENT-->
        <CheckBox
            style="@style/DarkCheckbox"
            android:id="@+id/cbAuditory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:text="@string/label_auditory" />
        <!--WHEELCHAIR NEED -->
        <CheckBox
            style="@style/DarkCheckbox"
            android:id="@+id/cbWheelchair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:text="@string/label_wheelchair" />
        <!--SIGN UP BUTTON-->
        <Button
            style="@style/PrimaryBtn"
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="60dp"
            android:text="@string/label_signup" />
        <!--BACK BUTTON-->
        <Button
            style="@style/OutlineBtn"
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="60dp"
            android:text="@string/label_back" />
        <!--FORM MESSAGE-->
        <TextView
            style="@style/DarkBodyTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/msg_signupAgree" />
    </LinearLayout>
</LinearLayout>
