<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/TitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="60dp"
            android:paddingBottom="10dp"
            android:background="@color/teal_100"
            android:text="@string/label_editProfile"/>
        <!-- FORM GROUP-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="40dp"
            android:orientation="vertical">
            <!-- INPUT FIRST NAME -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/BasicInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_firstName"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- INPUT LAST NAME -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/BasicInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_lastName" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- INPUT USERNAME -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/BasicInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_userName" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- INPUT EMAIL -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/BasicInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- INPUT HOME ADDRESS -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/BasicInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_homeAddress"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- INPUT WORK ADDRESS -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/BasicInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/InputTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_workAddress"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <!--    NEEDS ASSESSMENT-->
            <TextView
                style="@style/SubheadingTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/label_needs" />
            <!--    MOBILITY IMPAIRMENT-->
            <CheckBox
                style="@style/Checkbox"
                android:id="@+id/commSignup_cbMobility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:text="@string/label_mobility"/>
            <!--    AUDITORY IMPAIRMENT-->
            <CheckBox
                style="@style/Checkbox"
                android:id="@+id/commSignup_cbAuditory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:text="@string/label_auditory" />
            <!--    WHEELCHAIR NEED-->
            <CheckBox
                style="@style/Checkbox"
                android:id="@+id/commSignup_cbWheelchair"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:text="@string/label_wheelchair"
                />

            <!-- BUTTON SIGNUP -->
            <Button
                style="@style/PrimaryBtn"
                android:id="@+id/commSignup_btnSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="60dp"
                android:text="@string/label_save" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>