<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/teal_700"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".commuter.CommUpdateEmailActivity" >
    <!--TOOLBAR-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/BasicToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:navigationIcon="@drawable/ic_back" />

    <!--FORM GROUP-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        android:gravity="center_vertical">
        <!--FORM LABEL-->
        <TextView
            style="@style/DarkTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_update_email" />
        <TextView
            style="@style/DarkBodyTxt"
            android:id="@+id/tvChangeEmailInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_re_authenticate" />

        <!--INPUT CURRENT EMAIL-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/BasicInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/hint_email" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/InputTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--INPUT PASSWORD-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/BasicInput"
            android:id="@+id/tfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/hint_password"
            app:endIconMode="password_toggle"
            app:passwordToggleTint="@color/grey" >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/InputTxt"
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--INPUT NEW EMAIL-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/BasicInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_email" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNewEmail"
                style="@style/InputTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:visibility="gone" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--SUBMIT BUTTON-->
        <Button
            style="@style/PrimaryBtn"
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="40dp"
            android:text="@string/label_changeEmail"
            android:visibility="visible" />
        <!--SAVE BUTTON-->
        <Button
            style="@style/PrimaryBtn"
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="40dp"
            android:text="@string/label_save"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>