<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/teal_700"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassActivity"
    android:orientation="vertical" >
    <!--TOOLBAR-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/BasicToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:navigationIcon="@drawable/ic_back" />

    <!--FORM GROUP-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        android:gravity="center_vertical" >
        <!--FORM LABEL-->
        <TextView
            style="@style/DarkTitleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_forgetPass" />
        <TextView
            style="@style/DarkBodyTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/msg_forgetPass" />

        <!--INPUT EMAIL-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/BasicInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp" >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/InputTxt"
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <!--SUBMIT BUTTON-->
        <Button
            style="@style/PrimaryBtn"
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="@string/label_forgetPassBtn" />
    </LinearLayout>
</LinearLayout>